# make87

./: .dockerignore  Cargo.toml  README.md  deny.toml  install.sh
.github/workflows/: cargo-deny.yml  e2e-tests.yml  release.yml  version-update.yml
attribution/: about.hbs  about.toml
m87-client/: Cargo.toml  Dockerfile  Dockerfile.e2e  Dockerfile.install-test  README.md  build.rs  install.sh
m87-client/examples/: README.md
m87-client/examples/features/: README.md
m87-client/examples/features/auth/: README.md
m87-client/examples/features/devices/: README.md
m87-client/examples/features/docker-compose/: README.md
m87-client/examples/features/docker-compose/simple/: Dockerfile  docker-compose.yml  entrypoint.sh
m87-client/examples/features/exec/: README.md
m87-client/examples/features/filesystem/: README.md
m87-client/examples/features/forward/: README.md
m87-client/examples/features/logs/: README.md
m87-client/examples/features/metrics/: README.md
m87-client/examples/features/shell/: README.md
m87-client/examples/features/tunnels/: README.md
m87-client/examples/use-cases/: README.md
m87-client/src/: cli.rs  lib.rs  main.rs  org.rs  runtime.rs  server.rs
m87-client/src/agent/: daemon.rs  heartbeat.rs  mod.rs
m87-client/src/agent/services/: docker.rs  mod.rs  service_info.rs  systemd.rs
m87-client/src/agents/: mod.rs
m87-client/src/auth/: agent.rs  mod.rs  oauth.rs
m87-client/src/config/: mod.rs
m87-client/src/device/: agent.rs  control_tunnel.rs  daemon.rs  deploy.rs  deployment_manager.rs  docker.rs  forward.rs  fs.rs  log_manager.rs  mod.rs  serial.rs  ssh.rs  system_metrics.rs  tunnel.rs  udp.rs  unit_manager.rs
m87-client/src/device/services/: docker.rs  systemd.rs
m87-client/src/devices/: mod.rs
m87-client/src/rest/: auth.rs  container_logs.rs  container_terminal.rs  docker.rs  logs.rs  metrics.rs  mod.rs  port.rs  routes.rs  serial.rs  ssh.rs  terminal.rs  upgrade.rs
m87-client/src/server/: auth.rs  container_terminal.rs  logs.rs  metrics.rs  shared.rs
m87-client/src/stack/: mod.rs
m87-client/src/streams/: auth.rs  docker.rs  exec.rs  forward.rs  logs.rs  metrics.rs  mod.rs  port.rs  quic.rs  router.rs  serial.rs  shared.rs  ssh.rs  stream_type.rs  terminal.rs  tunnel.rs  udp_manager.rs
m87-client/src/streams/logs/: docker.rs  mod.rs
m87-client/src/tui/: deploy.rs  device.rs  devices.rs  exec.rs  fs.rs  helper.rs  log.rs  logs.rs  metric.rs  metrics.rs  mod.rs  org.rs  shell.rs  tunnels.rs  user.rs
m87-client/src/update/: mod.rs
m87-client/src/util/: command.rs  device_cache.rs  format.rs  fs.rs  log_renderer.rs  logging.rs  mac.rs  macchina.rs  mod.rs  network.rs  raw_connection.rs  retry.rs  servers_parallel.rs  ssh.rs  subprocess.rs  system_info.rs  tls.rs  udp.rs  unix.rs  websocket.rs
m87-server/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
m87-server/src/: config.rs  db.rs  lib.rs  main.rs  response.rs
m87-server/src/api/: agent.rs  auth.rs  certificate.rs  client_connection.rs  deploy_spec.rs  device.rs  mod.rs  org.rs  quic.rs  serve.rs  tunnel.rs  web_transport.rs
m87-server/src/auth/: access_control.rs  claims.rs  jwk.rs  mod.rs  tunnel_token.rs
m87-server/src/models/: agent.rs  agent_auth_request.rs  api_key.rs  audit_logs.rs  deploy_spec.rs  device.rs  device_auth_request.rs  forward.rs  mod.rs  org.rs  roles.rs  ssh_key.rs  user.rs
m87-server/src/relay/: relay_state.rs
m87-server/src/util/: mod.rs  pagination.rs  tcp_proxy.rs
m87-shared/: Cargo.toml
m87-shared/src/: config.rs  deploy_spec.rs  device.rs  forward.rs  heartbeat.rs  lib.rs  org.rs  roles.rs  users.rs
src/: main.rs
src/agent/: daemon.rs  mod.rs  system_metrics.rs
src/agent/services/: podman.rs
src/app/: mod.rs
src/auth/: mod.rs  node.rs  user.rs
src/config/: mod.rs
src/server/: container_logs.rs  mod.rs  routes.rs  terminal.rs
src/update/: mod.rs
src/util/: command.rs  mac.rs  macchina.rs
tests/: Cargo.toml
tests/src/: e2e.rs
tests/src/e2e_containers/: agent_args.rs  containers.rs  device_registration.rs  docker.rs  exec.rs  forward.rs  fs.rs  install.rs  ls.rs  misc.rs  mod.rs  monitoring.rs  runtime_args.rs  setup.rs  tunnel.rs
tests/src/e2e_containers/fixtures/: agent.rs  device.rs  mod.rs  runtime.rs  setup.rs
tests/src/e2e_containers/helpers/: exec.rs  mod.rs  sni.rs
