[workspace]
resolver = "2"
members = [
    "m87-client",
    "m87-server",
]

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3.31"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web server and HTTP
warp = { version = "0.4", features = ["server", "websocket"] }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Concurrency and utilities
dashmap = "6.1.0"
once_cell = "1.21.3"

# Cryptography and auth
jsonwebtoken = "9"
sha1 = "0.10.6"
