[workspace]
resolver = "2"
members = [
    "m87-client",
    "m87-server",
    "m87-shared"
]
exclude = ["tests"]
[workspace.dependencies]
# Async runtime and utilities
# Base tokio with common features - individual packages add more features as needed
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "io-util", "sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1.89"
futures = "0.3.31"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web server and HTTP
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }

# WebSocket


# Concurrency and utilities
dashmap = "6.1.0"
once_cell = "1.21.3"

# Cryptography and auth
jsonwebtoken = "9"
sha1 = "0.10.6"

# Utilities
rand = "0.8"
rand_core = "0.6"
hex = "0.4"
base64 = "0.22.1"
chrono = "0.4.42"
socket2 = "0.6.1"

# TLS and networking
tokio-yamux = "0.3.17"
tokio-rustls = "0.26"
rustls = { version = "0.23.33", default-features = false, features = ["ring", "std", "tls12", "log", "logging"] }

[profile.release]
# Optimize for performance and minimal resource footprint
# While maintaining safety for long-running edge devices
opt-level = 3              # Maximum optimization
lto = "fat"                # Full link-time optimization for better dead code elimination
codegen-units = 1          # Better optimization at the cost of compile time
strip = true               # Strip debug symbols from binary
