[package]
name = "m87-client"
version = "0.0.0-dev0"
edition = "2021"
authors = ["Phillip Thomas <phillip@make87.com>", "Nisse Knudsen <nisse@make87.com>"]
description = "Unified CLI and agent for connecting edge systems to the make87 platform"
license = "Apache-2.0"

[[bin]]
name = "m87"
path = "src/main.rs"


[lib]
name = "m87_client"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
async-trait = { workspace = true }
tokio = { workspace = true, features = ["net", "time", "fs", "process", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
sha1 = { workspace = true }
warp = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
jsonwebtoken = { workspace = true }
once_cell = { workspace = true }

rustls = { workspace = true }
tokio-rustls = { workspace = true }
tokio-yamux = { workspace = true }

# Client-specific dependencies
hostname = "0.3"
clap = { version = "4.5", features = ["derive", "cargo"] }
self_update = { version = "0.41", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
dirs = "5.0"
libmacchina = "7"
openidconnect = { version = "3.5.0", default-features = false, features = ["accept-rfc3339-timestamps", "rustls-tls", "reqwest"] }
sysinfo = "0.36.1"
webbrowser = "1.0.6"
pty-process = { version = "0.5.3", features = ["async"] }
webpki-roots = "1.0.3"

[dev-dependencies]
tempfile = "3.13"
mockito = "1.5"
