[package]
name = "m87-client"
version = "0.0.36-dev0"
edition = "2024"
authors = ["Phillip Thomas <phillip@make87.com>", "Nisse Knudsen <nisse@make87.com>"]
description = "Unified CLI and device for connecting edge systems to the make87 platform"
license = "Apache-2.0"

[[bin]]
name = "m87"
path = "src/main.rs"


[lib]
name = "m87_client"
path = "src/lib.rs"

[features]
# Features are auto-enabled by build.rs based on target OS:
# - Linux: agent + manager (full functionality)
# - macOS/Windows: manager only (device management, no local agent)
default = []
agent = []    # Agent-specific: systemd service, local metrics, REST API, control tunnel
manager = []  # Manager-specific: device management, OAuth login, remote operations

[dependencies]
# Local workspace crates
m87-shared = { path = "../m87-shared" }

# Workspace dependencies
async-trait = { workspace = true }
tokio = { workspace = true, features = ["net", "time", "fs", "process", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
anyhow = { workspace = true }
reqwest = { workspace = true }
sha1 = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
jsonwebtoken = { workspace = true }
once_cell = { workspace = true }
axum = { version = "0.8.6", features = ["ws", "macros"] }

# http3 and quic
quinn.workspace = true
quinn-proto.workspace = true

rustls = { workspace = true }
# tokio-rustls = { workspace = true }

# Client-specific dependencies
clap = { version = "4.5", features = ["derive", "cargo"] }
self_update = { version = "0.42.0", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
dirs = "6.0.0"
openidconnect = { version = "4.0.1", default-features = false, features = ["accept-rfc3339-timestamps", "rustls-tls", "reqwest"] }
sysinfo = "0.37.2"
webpki-roots = "1.0.3"

portable-pty = "0.9"
# only for cli usedfor shell
termion = "4.0.6"
# used for pretty cli ui printing
ratatui = { version = "0.29", features = ["termion"] }
# STUN client for public IP detection (WebRTC-compatible)
stun = "0.9.0"

# custom upgrade handling
hyper = "1"
hyper-util = "0.1"
bytes = "1"
base64 = "0.22"
futures-util = "0.3"
# ssh
russh = "0.55.0"
russh-sftp = "2.1.1"
filetime = "0.2"

# Signal handling and cancellation
tokio-util = "0.7"

# serial forwarding
tokio-serial = "5.4.1"
# cli side pty creation
libc = "=0.2.177"

# Time parsing for relative timestamps
chrono = "0.4"
