[package]
name = "m87-server"
version = "0.0.0-dev0"
edition = "2024"
authors = ["Phillip Thomas <phillip@make87.com>", "Nisse Knudsen <nisse@make87.com>"]
publish = false
license = "AGPL-3.0-or-later"

[dependencies]
# Local workspace crates
m87-shared = { path = "../m87-shared" }

# Common workspace dependencies
tokio = { workspace = true, features = ["net", "time", "fs", "process", "signal"] }
tokio-stream.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
rand_core.workspace = true
hex.workspace = true
base64.workspace = true
chrono.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
socket2.workspace = true

# Server-specific dependencies
mongodb = "3"
rcgen = "0.14.5"
arc-swap = "=1.7.1"
rustls-pemfile = "2.2.0"

# http3 and quic
quinn.workspace = true
quinn-proto.workspace = true

# Server-specific serialization
bson = { version = "3", features = ["serde_with-3", "chrono-0_4"] }

# Server-specific web framework
axum-server =  { version = "0.7.3", features = ["tls-rustls"] }
axum = { version = "0.8.6", features = ["ws", "macros"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
tower-http = { version = "0.6.1", features = ["cors", "trace", "timeout", "sensitive-headers", "compression-full"] }
headers = "0.4.1"

# Server-specific cryptography
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"

# Server-specific utilities
uuid = "1.18.1"
