[package]
name = "m87-shared"
version = "0.6.4"
edition = "2024"
license = "Apache-2.0"
description = "Shared types and utilities for the make87 platform"

[dependencies]
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.19", features = ["v4"] }
